--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,8 +14,13 @@
   "dependencies": {
     "common": "^1.0.1",
     "express": "^4.15.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2",
+    "redux-actions": "2.2.1",
+    "redux-devtools-dock-monitor": "1.1.2",
+    "redux-devtools-log-monitor": "1.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
