--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -6,14 +6,12 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "prod": "webpack -p",
-    "start": "node ."
+    "prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "common": "^1.1.1",
-    "express": "^4.15.3",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
