--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.4",
-    "lerna": "^2.0.0-rc.5",
+    "lerna": "^2.9.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
