--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
+  },
+  "scripts": {
+    "postinstall": "lerna bootstrap --hoist"
   }
 }
