--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chalk": "^2.3.2",
     "css-loader": "^0.28.4",
+    "express": "^4.16.2",
     "lerna": "^2.9.0",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
-    "postinstall": "lerna bootstrap --hoist"
+    "postinstall": "lerna bootstrap --hoist",
+    "start": "node ./server"
   }
 }
