--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
-  "lerna": "2.5.1",
+  "lerna": "2.9.0",
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "version": "0.0.0"
 }
