--- a/package.json
+++ b/package.json
@@ -1,28 +1,7 @@
 {
-  "dependencies": {
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "redux-actions": "2.2.1",
-    "redux-devtools": "3.4.0",
-    "redux-devtools-dock-monitor": "1.1.2",
-    "redux-devtools-log-monitor": "1.3.0"
-  },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "chalk": "^2.3.2",
-    "css-loader": "^0.28.4",
-    "express": "^4.16.2",
-    "lerna": "^2.9.0",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "chalk": "^2.4.0",
+    "express": "^4.16.3"
   },
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
