--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,35 +1,37 @@
 {
   "name": "client",
-  "private": "true",
+  "private": true,
   "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "prod": "webpack -p"
+    "build": "webpack --mode development",
+    "prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "common": "^1.2.0",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.6",
+    "common": "1.2.0",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-redux": "5.0.7",
     "redux": "3.7.2",
-    "redux-actions": "2.2.1",
-    "redux-devtools-dock-monitor": "1.1.2",
-    "redux-devtools-log-monitor": "1.3.0"
+    "redux-actions": "2.3.0",
+    "redux-devtools": "3.4.1",
+    "redux-devtools-dock-monitor": "1.1.3",
+    "redux-devtools-log-monitor": "1.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.4",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "css-loader": "0.28.11",
+    "style-loader": "0.20.3",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.3"
   }
 }
