--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "devDependencies": {
     "chalk": "^2.4.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "identity-obj-proxy": "^3.0.0"
   },
   "scripts": {
     "postinstall": "lerna bootstrap --hoist",
-    "start": "node ./server"
+    "start": "node ./server",
+    "test": "jest"
+  },
+  "dependencies": {
+    "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.2"
   }
 }
